argocd-apps/nginx-manifests/rate-limiting.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rate-limiting
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "1"
    nginx.ingress.kubernetes.io/limit-rpm: "1"
    nginx.ingress.kubernetes.io/limit-connections: "10"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "1"
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: limits.hostspaceng.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: next-app-service
                port:
                  name: http                 
  tls:
    - hosts:
      - limits.hostspaceng.com
      secretName: limits-tls-secret
